# Deployment-ECG

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py  model_service.py  visualization.py
app/templates/: index.html
data/: .gitignore
data/processed_data/: metadata.pkl
data/test_datasets/: load_ptbxl_data.py  test_multiple_datasets.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_model.pth
models/33a5d83eac3bd07c24e75b7e68fed86a/best_model/: data.pkl
models/33a5d83eac3bd07c24e75b7e68fed86a/best_model/.data/: serialization_id
models/33a5d83eac3bd07c24e75b7e68fed86a/best_model/data/: 0  1  10  100  102  103  104  105  106  109  110  111  112  115  116  117  118  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  135  136  137  138  139  14  (+276 more)
notebooks/: ECG_model(with_visuals) .ipynb  Preprocessing_and_model.ipynb
